[package]
name = "bitcoin-taproot-wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bdk = {version = "0.29.0", features = ["rpc", "all-keys"]}
bitcoin = { version = "0.32.2", features = ["rand"]}
rand = "0.8.5"
